--- a/bio.html
+++ b/bio.html
@@ -43,7 +43,7 @@
 		</div>
 		<div class="col-md-6 align">
 			<div class="panel-body">
-				<img height="400px" width="350px" src="gambar.jpg" alt="Gambar Muhammad Abdul Ghofar" class="img-thumbnail"><br/><br/>
+				<img height="400px" width="350px" src="gambar.jpg" alt="Gambar Muhammad Abdul Ghofar" class="icons/img-thumbnail"><br/><br/>
 				<table class="table table-hover table-striped">
 					<tr>
 						<td>Nama </td>
